# kireji-telegram-bot

./: .gitignore  Makefile  README.md  pyproject.toml
src/: main.py  text_analyzer.py
tests/: test_haiku_text_analyzer.py
